# ivfplusplus

./: .gitignore  BUILD.md  BUILD_SYSTEM_CHANGES.md  CMakeLists.txt  CMakePresets.json  INSTALL.win32  MODERNIZATION_SUMMARY.md  Makefile  README  README.md  THANKS  build.cmd  build.sh  configure  ivfbuild  ivfbuild.cmd  ivfbuild.py  ivfdist.cmd  ivfdist_exclude.txt  ivfenv.cmd  ivfinstall  ivfvars.cmd  ivfversion.py  vcpkg.json
examples/: CMakeLists.txt
examples/ac3dreader/: CMakeLists.txt  ac3dreader.cpp
examples/actionctl/: CMakeLists.txt  actionctl.cpp
examples/advgeom/: CMakeLists.txt  advgeom.cpp  advgeom.dxf
examples/bmfonts/: CMakeLists.txt  bmfonts.cpp
examples/controllers/: CMakeLists.txt  controllers.cpp
examples/cube/: CMakeLists.txt  cube.cpp
examples/culling/: CMakeLists.txt  culling.cpp
examples/extrusion/: CMakeLists.txt  extrusion.cpp
examples/fibrescope/: ArrayCoordList.cpp  ArrayCoordList.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  ConnectionPoint.cpp  ConnectionPoint.h  CoordHist.cpp  CoordHist.h  CoordList.cpp  CoordList.h  CustomWidget.cpp  CustomWidget.h  DiagramFrame.cpp  DiagramFrame.h  DiscreteTime.cpp  DiscreteTime.h  Fibre.cpp  Fibre.h  FibreComposite.cpp  FibreComposite.h  Fl_HoverButton.cpp  Fl_HoverButton.h  HighlightRenderer.cpp  HighlightRenderer.h  IvfArrayCoordList.cpp  IvfArrayCoordList.h  IvfColorMap.cpp  IvfColorMap.h  IvfConnectionPoint.cpp  IvfConnectionPoint.h  IvfCoordHist.cpp  IvfCoordHist.h  IvfCoordList.cpp  IvfCoordList.h  IvfCustomWidget.cpp  IvfCustomWidget.h  IvfDiscreteTime.cpp  IvfDiscreteTime.h  IvfFibre.cpp  (+23 more)
examples/fibreviewc/: CMakeLists.txt  IvfDiscreteTime.h  IvfFibre.cpp  IvfFibreComposite.cpp  IvfUserSettings.h  IvfVectorCoordList.cpp  main.cpp
examples/fltkrobot/: CMakeLists.txt  RobotView.h  RobotWindow.cpp  RobotWindow.h
examples/fly/: CMakeLists.txt  IvfFlyCamera.cpp  IvfFlyCamera.h  IvfFlyWidget.cpp  IvfFlyWidget.h  StarField.cpp  StarField.h  main.cpp
examples/fonts/: CMakeLists.txt  main.cpp
examples/gleextrusion/: CMakeLists.txt  gle.cpp
examples/glut/: CMakeLists.txt
examples/handlers/: CMakeLists.txt  Makefile.am  handlers.cpp
examples/imui/: CMakeLists.txt  imui.cpp
examples/lighting/: CMakeLists.txt  lighting.cpp
examples/lod/: CMakeLists.txt  lod.cpp
examples/manip/: CMakeLists.txt  manip.cpp
examples/math/: CMakeLists.txt  math.cpp
examples/objframe2/: CMakeLists.txt  CircularTube.cpp  CircularTube.h  IvfCircularTube.cpp  IvfCircularTube.h  IvfRotateCursor.cpp  IvfRotateCursor.h  IvfVectorCursor.cpp  IvfVectorCursor.h  MainFrame.cpp  MainFrame.fl  MainFrame.h  RotateCursor.cpp  RotateCursor.h  VectorCursor.cpp  VectorCursor.h  WorkspaceView.cpp  WorkspaceView.h  main.cpp
examples/overlay/: CMakeLists.txt  overlay.cpp
examples/placement/: CMakeLists.txt  placement.cpp
examples/robot/: CMakeLists.txt  robot.cpp
examples/robot2/: CMakeLists.txt  robot2.cpp
examples/robot_events/: CMakeLists.txt  main.cpp
examples/scene/: scene.cpp
examples/selection/: CMakeLists.txt  selection.cpp
examples/texture/: CMakeLists.txt  perlinNoise.cpp  perlinNoise.h  texture.cpp
examples/texture_tut/: CMakeLists.txt  textures.cpp
examples/vertexarray/: Makefile  Makefile.in  vertexarray.cpp
examples/viewports/: CMakeLists.txt  viewports.cpp
include/: CMakeLists.txt
include/GL/: CMakeLists.txt
include/RGL/: RGL.h
include/glad/: CMakeLists.txt  glad.h
include/ivf/: Arrow.h  Axis.h  Base.h  Billboard.h  BitmapFont.h  BlendState.h  Blending.h  Brick.h  BufferSelection.h  Camera.h  Color.h  ColorList.h  Composite.h  CompositeState.h  Cone.h  ConstructionPlane.h  CoordinateSystem.h  Cube.h  CullState.h  CulledComposite.h  CulledScene.h  Culling.h  Cursor.h  Cylinder.h  DepthBufferState.h  ExtrArrow.h  Extrusion.h  FaceSet.h  Fog.h  GL.h  GLBase.h  GLPrimitive.h  GenericButton.h  GlobalState.h  Grid.h  Image.h  Index.h  IndexBase.h  IvfArrow.h  IvfAxis.h  (+158 more)
include/ivf3dui/: 3dUIDef.h  CMakeLists.txt  IvfUIBase.h  IvfUIButton.h  IvfUIButtonBase.h  IvfUIButtonGroup.h  IvfUIComposite.h  IvfUIInteractiveBase.h  IvfUISwitch.h  IvfUISwitchBase.h  UIBase.h  UIButton.h  UIButtonBase.h  UIButtonGroup.h  UIComposite.h  UIInteractiveBase.h  UISwitch.h  UISwitchBase.h
include/ivfctl/: Action.h  ActionController.h  CMakeLists.txt  CameraController.h  ColorController.h  Controller.h  ControllerGroup.h  CtlDef.h  IvfAction.h  IvfActionController.h  IvfCameraController.h  IvfColorController.h  IvfController.h  IvfControllerGroup.h  IvfPathController.h  IvfRotateController.h  IvfSlerpController.h  PathController.h  RotateController.h  SlerpController.h
include/ivfdef/: Def.h  IvfDef.h  IvfPointer.h  IvfSingletonDestroyer.h  Pointer.h  SingletonDestroyer.h
include/ivfext/: BmpImage.h  IvfBmpImage.h  IvfTgaImage.h  TgaImage.h
include/ivffile/: Ac3DReader.h  DxfReader.h  DxfWriter.h  FileBase.h  FileDef.h  FileReader.h  FileWriter.h  IvfAc3DReader.h  IvfDxfReader.h  IvfDxfWriter.h  IvfFileBase.h  IvfFileReader.h  IvfFileWriter.h  IvfPolyReader.h  PolyReader.h
include/ivffltk/: FltkBase.h  FltkWorkspace.h  IvfFltkBase.h  IvfFltkWorkspace.h
include/ivffont/: BitmapFont.h  ExtrudedFont.h  Font.h  IvfBitmapFont.h  IvfExtrudedFont.h  IvfPixmapFont.h  IvfPolygonalFont.h  IvfTextureFont.h  OutlineFont.h  RasterFont.h  Text.h
include/ivfgle/: Gle.h  GleColorArray.h  GleContour.h  GleCoordArray.h  GleExtrudedBase.h  GleExtrusion.h  GleLine.h  GlePolyCone.h  GlePolyCylinder.h  GleScalarArray.h  GleSpiral.h  GleSpiralCylinder.h  GleTwistExtrusion.h  IvfGle.h  IvfGleColorArray.h  IvfGleContour.h  IvfGleCoordArray.h  IvfGleExtrudedBase.h  IvfGleExtrusion.h  IvfGleLine.h  IvfGlePolyCone.h  IvfGlePolyCylinder.h  IvfGleScalarArray.h  IvfGleSpiral.h  IvfGleTwistExtrusion.h
include/ivfglut/: GlutApplication.h  GlutBase.h  (+3 more)
src/: CMakeLists.txt
trunk/: AUTHORS  CMakeLists.txt  INSTALL  README  README.EXAMPLES.txt  configure  ivfbuild  ivfbuild.cmd  ivfbuild.py  ivfdist_exclude.txt  ivfenv.cmd  ivfvars.cmd  ivfversion.py
utils/: CMakeLists.txt  ivfappgen  ivfappgen.py  update_license.py
(+874 files in other folders)
