add_subdirectory(glad)
add_subdirectory(GL)
add_subdirectory(ivfdef)
add_subdirectory(ivfmath)
add_subdirectory(ivf)
add_subdirectory(ivfwidget)
add_subdirectory(ivfui)
add_subdirectory(ivffltk)
add_subdirectory(ivffile)
add_subdirectory(ivfimage)
add_subdirectory(ivfctl)
add_subdirectory(ivfext)
add_subdirectory(ivf3dui)
add_subdirectory(ivfwin32)
add_subdirectory(ivffont)
add_subdirectory(ivfgle)
add_subdirectory(vc)
