project(ivf)

cmake_minimum_required(VERSION 2.6)

option(IVF_UI "Build user interface integration libraries." ON)
option(IVF_UI_FLTK "Build user interface integration libraries." OFF)
option(IVF_UI_WIN32 "Build user interface integration libraries." OFF)
option(IVF_UI_GLUT "Build user interface integration libraries." ON)
option(IVF_IMAGE "Build Ivf++ image support." ON)
option(IVF_GLE "Build Ivf++ with GLE support." ON)
option(IVF_FONT "Build Ivf++ with font support." OFF)
option(IVF_EXAMPLES "Build Ivf++ examples." ON)
option(IVF_EXAMPLES_GENERIC "Build Ivf++ generic examples" ON)
option(IVF_EXAMPLES_GLE "Build Ivf++ GLE examples" OFF)
option(IVF_EXAMPLES_FLTK "Build Ivf++ FLTK examples" OFF)
option(IVF_EXAMPLES_WIN32 "Build Ivf++ WIN32 examples" OFF)
option(IVF_EXAMPLES_FONTS "Build Ivf++ font support examples" OFF)
option(IVF_DEBUG "Build Ivf++ with debug information." OFF)
option(IVF_SHARED "Build Ivf++ as shared libraries." OFF)

set( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )
set( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )

if(APPLE)
set( FREETYPE_INCLUDE /usr/X11/include/freetype2 )
set( FREETYPE_CONFIG /usr/X11/include )
set( FREETYPE_LIBS /usr/X11/lib )
else(APPLE)
set( FREETYPE_INCLUDE /usr/include/freetype2 )
endif(APPLE)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
endif(NOT CMAKE_BUILD_TYPE)

if( CMAKE_BUILD_TYPE STREQUAL "Debug" )
	set(IVF_DEBUG on)
else( CMAKE_BUILD_TYPE STREQUAL "Debug" )
	set(IVF_DEBUG off)
endif( CMAKE_BUILD_TYPE STREQUAL "Debug" )

if(WIN32)
	message( "ivf++ windows build" )
else(WIN32)
	if(APPLE)
		message("Max OS X build")
	else(APPLE)
		message( "ivf++ linux build")
	endif(APPLE)
endif(WIN32)

if(IVF_DEBUG)
	message( "debug information on" )
else(IVF_DEBUG)
	message( "debug information off" )
endif(IVF_DEBUG)

if(IVF_SHARED)
	message( "building shared libraries." )
else(IVF_SHARED)
	message( "building static libraries." )
endif(IVF_SHARED)

if(WIN32)
    if(IVF_DEBUG)
		string(REPLACE "/zi" "/z7" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
		string(REPLACE "/zi" "/z7" CMAKE_C_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
    endif(IVF_DEBUG)
endif(WIN32)

macro(IVFAPP_SETUP)

	if(WIN32)
		include_directories(${PROJECT_SOURCE_DIR}/include)
	else(WIN32)
		include_directories(${PROJECT_SOURCE_DIR}/include ${FREETYPE_INCLUDE} ${FREETYPE_CONFIG})
		link_directories(${FREETYPE_LIBS})
	endif(WIN32)

	file(GLOB SOURCE_FILES *.cpp)
	file(GLOB INCLUDE_FILES *.h) 	

	set(EXT_LIBS "")
	set(EXT_DEBUG_LIBS "")

	if(IVF_SHARED)
		if(WIN32)
			add_definitions(-DIVF_DLL -DFL_DLL)
		endif(WIN32)
	else(IVF_SHARED)
		if(WIN32)
			set(EXT_DEBUG_LIBS fltkd fltkgld)
			set(EXT_LIBS fltk fltkgl)
		else(WIN32)
			set(EXT_LIBS "")
		endif(WIN32)
	endif(IVF_SHARED)

	if(WIN32)
		if(IVF_DEBUG)
			add_executable( ${IVFAPP_NAME}d ${SOURCE_FILES} ${INCLUDE_FILES})
			target_link_libraries( ${IVFAPP_NAME}d ${IVFAPP_DEBUG_LIBS} ${EXT_DEBUG_LIBS})
			install_targets( /bin ${IVFAPP_NAME}d )
		else(IVF_DEBUG)
			add_executable(${IVFAPP_NAME} ${SOURCE_FILES} ${INCLUDE_FILES})
			target_link_libraries( ${IVFAPP_NAME} ${IVFAPP_LIBS} ${EXT_LIBS})
			install_targets( /bin ${IVFAPP_NAME} )
		endif(IVF_DEBUG)		
	else(WIN32)
		if(APPLE)
                        add_executable(${IVFAPP_NAME} ${SOURCE_FILES})
                        target_link_libraries(${IVFAPP_NAME} ${IVFAPP_LIBS} ${EXT_LIBS} "-framework Cocoa" "-framework ApplicationServices" "-framework agl" "-framework opengl" "-framework GLUT")
                        install_targets( /bin ${IVFAPP_NAME} )
		else(APPLE)
			add_executable(${IVFAPP_NAME} ${SOURCE_FILES})
			target_link_libraries(${IVFAPP_NAME} ${IVFAPP_LIBS} ${EXT_LIBS}) 
			install_targets( /bin ${IVFAPP_NAME} )
		endif(APPLE)
	endif(WIN32)

endmacro(IVFAPP_SETUP)

macro(IVFCONAPP_SETUP)
        if(WIN32)
                include_directories(${PROJECT_SOURCE_DIR}/include)
        else(WIN32)
                include_directories(${PROJECT_SOURCE_DIR}/include ${FREETYPE_INCLUDE})
        endif(WIN32)

        file(GLOB SOURCE_FILES *.cpp)
        file(GLOB INCLUDE_FILES *.h)

        set(EXT_LIBS "")
        set(EXT_DEBUG_LIBS "")

        if(IVF_SHARED)
                if(WIN32)
                        add_definitions(-DIVF_DLL -DFL_DLL)
                endif(WIN32)
        else(IVF_SHARED)
                if(WIN32)
                        set(EXT_DEBUG_LIBS fltkd fltkgld)
                        set(EXT_LIBS fltk fltkgl)
                else(WIN32)
                        set(EXT_LIBS)
                endif(WIN32)
        endif(IVF_SHARED)

        if(WIN32)
                if(IVF_DEBUG)
                        add_executable( ${IVFAPP_NAME}d ${SOURCE_FILES} ${INCLUDE_FILES})
                        target_link_libraries( ${IVFAPP_NAME}d ${IVFAPP_DEBUG_LIBS} ${EXT_DEBUG_LIBS})
                        install_targets( /bin ${IVFAPP_NAME}d )
                else(IVF_DEBUG)
                        add_executable(${IVFAPP_NAME} ${SOURCE_FILES} ${INCLUDE_FILES})
                        target_link_libraries( ${IVFAPP_NAME} ${IVFAPP_LIBS} ${EXT_LIBS})
                        install_targets( /bin ${IVFAPP_NAME} )
                endif(IVF_DEBUG)
        else(WIN32)
                add_executable(${IVFAPP_NAME} ${SOURCE_FILES})
                target_link_libraries(${IVFAPP_NAME} ${IVFAPP_LIBS} ${EXT_LIBS})
                install_targets( /bin ${IVFAPP_NAME} )
        endif(WIN32)

endmacro(IVFCONAPP_SETUP)

if (IVF_EXAMPLES)
	subdirs(src include examples utils)
else (IVF_EXAMPLES)
	subdirs(src include utils)
endif (IVF_EXAMPLES)
